Add Hero content on mobile

--- a/index.html
+++ b/index.html
@@ -153,6 +153,60 @@
           </li>
         </ul>
       </nav>
+
+      <!-- Hero -->
+      <section class="hero">
+        <div class="container">
+          <!-- Hero content-->
+          <section class="hero__content">
+            <!-- Content -->
+            <h1 class="hero__heading heading">An Interactive Designer</h1>
+            <p class="desc hero__desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
+              non nisl tincidunt ut elementum turpis.
+            </p>
+
+            <!-- CTA group -->
+            <div class="hero__cta-group">
+              <a href="#!" class="btn">Book a Call</a>
+              <a href="#!" class="hero__link">My Works</a>
+            </div>
+
+            <!-- Social media group -->
+            <div class="social-group">
+              <p class="social__desc">Follow me on:</p>
+
+              <div class="social__circle-group">
+                <div class="social__circle">
+                  <img
+                    src="./assets/images/behance.svg"
+                    alt="behance"
+                    class="social__icon"
+                  />
+                </div>
+
+                <div class="social__circle">
+                  <img
+                    src="./assets/images/ball.svg"
+                    alt="ball"
+                    class="social__icon"
+                  />
+                </div>
+
+                <div class="social__circle">
+                  <img
+                    src="./assets/images/instagram.svg"
+                    alt="instagram"
+                    class="social__icon"
+                  />
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <!-- Hero media -->
+        </div>
+      </section>
     </header>
   </body>
 </html>
