Add Hero media on mobile

--- a/index.html
+++ b/index.html
@@ -205,6 +205,20 @@
           </section>
 
           <!-- Hero media -->
+          <div class="hero__media">
+            <figure>
+              <img
+                src="./assets/images/man.png"
+                alt="smile-man"
+                class="hero__img"
+              />
+            </figure>
+
+            <img
+              src="./assets/images/header-decoration.svg"
+              class="hero__decor"
+            />
+          </div>
         </div>
       </section>
     </header>
