Add Client part on mobile

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <link rel="stylesheet" href="./assets/styles/styles.css" />
   </head>
 
-  <body>
+  <body style="height: 10000px">
     <!-- Header -->
     <header class="header">
       <!-- Nav bar -->
@@ -228,5 +228,72 @@
         </div>
       </section>
     </header>
+
+    <!-- Client -->
+    <section class="client">
+      <div class="client__inner">
+        <!-- Heading -->
+        <h2 class="client__heading heading">Meet my recent clients</h2>
+
+        <!-- Client group -->
+        <div class="client-group--large">
+          <!-- Group 1 -->
+          <div class="client-group--small">
+            <img
+              src="./assets/images/google.svg"
+              alt="google"
+              class="client-item"
+            />
+            <img
+              src="./assets/images/upwork.svg"
+              alt="upwork"
+              class="client-item"
+            />
+          </div>
+
+          <!-- Group 2 -->
+          <div class="client-group--small">
+            <img
+              src="./assets/images/warnerbros.svg"
+              alt="warner bros"
+              class="client-item"
+            />
+            <img
+              src="./assets/images/creativecloud.svg"
+              alt="creative cloud"
+              class="client-item"
+            />
+          </div>
+
+          <!-- Group 3 -->
+          <div class="client-group--small">
+            <img
+              src="./assets/images/mailchimp.svg"
+              alt="mailchimp"
+              class="client-item"
+            />
+            <img
+              src="./assets/images/woocommerce.svg"
+              alt="woocommerce"
+              class="client-item"
+            />
+          </div>
+
+          <!-- Group 4 -->
+          <div class="client-group--small">
+            <img
+              src="./assets/images/adobe.svg"
+              alt="adobe"
+              class="client-item"
+            />
+            <img
+              src="./assets/images/canva.svg"
+              alt="canva"
+              class="client-item"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
