Add Service part on mobile

--- a/index.html
+++ b/index.html
@@ -295,5 +295,79 @@
         </div>
       </div>
     </section>
+
+    <!-- Service -->
+    <section class="service">
+      <!-- Top -->
+      <div class="service__top">
+        <h2 class="heading">Specialties</h2>
+        <p class="desc service__desc">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non
+          nisl tincidunt ut elementum turpis.
+        </p>
+      </div>
+
+      <!-- Service group -->
+      <div class="service-group">
+        <div class="container">
+          <div class="row row-cols-1 flex-nowrap">
+            <!-- Item 1 -->
+            <div class="col">
+              <article class="service-item">
+                <div class="service-item__icon">
+                  <img src="./assets/images/light-bulb.svg" alt="" />
+                </div>
+                <h3 class="heading--small service-item__heading">
+                  Product design
+                </h3>
+                <p class="desc service-item__desc">
+                  Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
+                  solor ut elementum turpis.
+                </p>
+              </article>
+            </div>
+
+            <!-- Item 2 -->
+            <div class="col">
+              <article class="service-item">
+                <div class="service-item__icon">
+                  <img src="./assets/images/pencil.svg" alt="" />
+                </div>
+                <h3 class="heading--small service-item__heading">
+                  UI/UX Design
+                </h3>
+                <p class="desc service-item__desc">
+                  Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
+                  solor ut elementum turpis.
+                </p>
+              </article>
+            </div>
+
+            <!-- Item 3 -->
+            <div class="col">
+              <article class="service-item">
+                <div class="service-item__icon">
+                  <img src="./assets/images/phone.svg" alt="" />
+                </div>
+                <h3 class="heading--small service-item__heading">
+                  Interactive design
+                </h3>
+                <p class="desc service-item__desc">
+                  Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
+                  solor ut elementum turpis.
+                </p>
+              </article>
+            </div>
+          </div>
+        </div>
+
+        <!-- Active circle group -->
+        <div class="active-group">
+          <div class="active-circle active"></div>
+          <div class="active-circle"></div>
+          <div class="active-circle"></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
