Add Project part on mobile

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     <!-- Service -->
     <section class="service">
       <!-- Top -->
-      <div class="service__top">
+      <div class="service__header">
         <h2 class="heading">Specialties</h2>
         <p class="desc service__desc">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non
@@ -360,12 +360,156 @@
             </div>
           </div>
         </div>
+      </div>
 
-        <!-- Active circle group -->
-        <div class="active-group">
-          <div class="active-circle active"></div>
-          <div class="active-circle"></div>
-          <div class="active-circle"></div>
+      <!-- Active circle group -->
+      <div class="active-group">
+        <div class="active-circle active"></div>
+        <div class="active-circle"></div>
+        <div class="active-circle"></div>
+      </div>
+    </section>
+
+    <!-- Project -->
+    <section class="project">
+      <!-- Header -->
+      <section class="project__header">
+        <h1 class="heading project__heading">
+          Take a look at my recent projects
+        </h1>
+        <p class="project__desc desc">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non
+          nisl tincidunt ut elementum turpis.
+        </p>
+      </section>
+
+      <!-- Project group -->
+      <div class="project-group">
+        <div class="container">
+          <div class="row row-cols-2">
+            <!-- Item 1 -->
+            <div class="col">
+              <article class="project-item">
+                <!-- Content -->
+                <div class="projet-item__content">
+                  <h3 class="heading--small project-item__heading">
+                    Wally Website
+                  </h3>
+                  <p class="project-item__desc desc">
+                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                  </p>
+                  <a href="#!" class="project-item__link">Case Study</a>
+                </div>
+
+                <!-- Image -->
+                <img
+                  src="./assets/images/project-01.svg"
+                  alt="project-01"
+                  class="project-item__img"
+                />
+
+                <!-- Decor -->
+                <img
+                  src="./assets/images/project-decor.svg"
+                  alt=""
+                  class="project-item__decor"
+                />
+              </article>
+            </div>
+
+            <!-- Item 2 -->
+            <div class="col">
+              <article class="project-item">
+                <!-- Content -->
+                <div class="projet-item__content">
+                  <h3 class="heading--small project-item__heading">
+                    Banking App
+                  </h3>
+                  <p class="project-item__desc desc">
+                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                  </p>
+                  <a href="#!" class="project-item__link">Case Study</a>
+                </div>
+
+                <!-- Image -->
+                <img
+                  src="./assets/images/project-02.svg"
+                  alt="project-02"
+                  class="project-item__img"
+                />
+
+                <!-- Decor -->
+                <img
+                  src="./assets/images/project-decor.svg"
+                  alt=""
+                  class="project-item__decor"
+                />
+              </article>
+            </div>
+
+            <!-- Item 3 -->
+            <div class="col">
+              <article class="project-item">
+                <!-- Content -->
+                <div class="projet-item__content">
+                  <h3 class="heading--small project-item__heading">Web App</h3>
+                  <p class="project-item__desc desc">
+                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                  </p>
+                  <a href="#!" class="project-item__link">Case Study</a>
+                </div>
+
+                <!-- Image -->
+                <img
+                  src="./assets/images/project-03.svg"
+                  alt="project-03"
+                  class="project-item__img"
+                />
+
+                <!-- Decor -->
+                <img
+                  src="./assets/images/project-decor.svg"
+                  alt=""
+                  class="project-item__decor"
+                />
+              </article>
+            </div>
+
+            <!-- Item 4 -->
+            <div class="col">
+              <article class="project-item">
+                <!-- Content -->
+                <div class="projet-item__content">
+                  <h3 class="heading--small project-item__heading">
+                    Oculus Website
+                  </h3>
+                  <p class="project-item__desc desc">
+                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                  </p>
+                  <a href="#!" class="project-item__link">Case Study</a>
+                </div>
+
+                <!-- Image -->
+                <img
+                  src="./assets/images/project-04.svg"
+                  alt="project-04"
+                  class="project-item__img"
+                />
+
+                <!-- Decor -->
+                <img
+                  src="./assets/images/project-decor.svg"
+                  alt=""
+                  class="project-item__decor"
+                />
+              </article>
+            </div>
+          </div>
+        </div>
+
+        <!-- CTA Btn -->
+        <div class="btn-wrap">
+          <a href="#!" class="btn project__btn">All Projects</a>
         </div>
       </div>
     </section>
