--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="./assets/styles/styles.css" />
+
+    <!-- Responsive -->
+    <link rel="stylesheet" href="./assets/styles/responsive.css" />
   </head>
 
   <body style="height: 10000px">
@@ -231,66 +234,68 @@
 
     <!-- Client -->
     <section class="client">
-      <div class="client__inner">
-        <!-- Heading -->
-        <h2 class="client__heading heading">Meet my recent clients</h2>
+      <div class="container">
+        <div class="client__inner">
+          <!-- Heading -->
+          <h2 class="client__heading heading">Meet my recent clients</h2>
 
-        <!-- Client group -->
-        <div class="client-group--large">
-          <!-- Group 1 -->
-          <div class="client-group--small">
-            <img
-              src="./assets/images/google.svg"
-              alt="google"
-              class="client-item"
-            />
-            <img
-              src="./assets/images/upwork.svg"
-              alt="upwork"
-              class="client-item"
-            />
-          </div>
+          <!-- Client group -->
+          <div class="client-group--large">
+            <!-- Group 1 -->
+            <div class="client-group--small">
+              <img
+                src="./assets/images/google.svg"
+                alt="google"
+                class="client-item"
+              />
+              <img
+                src="./assets/images/upwork.svg"
+                alt="upwork"
+                class="client-item"
+              />
+            </div>
 
-          <!-- Group 2 -->
-          <div class="client-group--small">
-            <img
-              src="./assets/images/warnerbros.svg"
-              alt="warner bros"
-              class="client-item"
-            />
-            <img
-              src="./assets/images/creativecloud.svg"
-              alt="creative cloud"
-              class="client-item"
-            />
-          </div>
+            <!-- Group 2 -->
+            <div class="client-group--small">
+              <img
+                src="./assets/images/warnerbros.svg"
+                alt="warner bros"
+                class="client-item"
+              />
+              <img
+                src="./assets/images/creativecloud.svg"
+                alt="creative cloud"
+                class="client-item"
+              />
+            </div>
 
-          <!-- Group 3 -->
-          <div class="client-group--small">
-            <img
-              src="./assets/images/mailchimp.svg"
-              alt="mailchimp"
-              class="client-item"
-            />
-            <img
-              src="./assets/images/woocommerce.svg"
-              alt="woocommerce"
-              class="client-item"
-            />
-          </div>
+            <!-- Group 3 -->
+            <div class="client-group--small">
+              <img
+                src="./assets/images/mailchimp.svg"
+                alt="mailchimp"
+                class="client-item"
+              />
+              <img
+                src="./assets/images/woocommerce.svg"
+                alt="woocommerce"
+                class="client-item"
+              />
+            </div>
 
-          <!-- Group 4 -->
-          <div class="client-group--small">
-            <img
-              src="./assets/images/adobe.svg"
-              alt="adobe"
-              class="client-item"
-            />
-            <img
-              src="./assets/images/canva.svg"
-              alt="canva"
-              class="client-item"
-            />
+            <!-- Group 4 -->
+            <div class="client-group--small">
+              <img
+                src="./assets/images/adobe.svg"
+                alt="adobe"
+                class="client-item"
+              />
+              <img
+                src="./assets/images/canva.svg"
+                alt="canva"
+                class="client-item"
+              />
+            </div>
           </div>
         </div>
       </div>
@@ -298,218 +303,224 @@
 
     <!-- Service -->
     <section class="service">
-      <!-- Top -->
-      <div class="service__header">
-        <h2 class="heading">Specialties</h2>
-        <p class="desc service__desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non
-          nisl tincidunt ut elementum turpis.
-        </p>
-      </div>
+      <div class="container">
+        <!-- Header -->
+        <div class="service__header">
+          <h2 class="heading">Specialties</h2>
+          <p class="desc service__desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
+            non nisl tincidunt ut elementum turpis.
+          </p>
+        </div>
 
-      <!-- Service group -->
-      <div class="service-group">
-        <div class="container">
-          <div class="row row-cols-1 flex-nowrap">
-            <!-- Item 1 -->
-            <div class="col">
-              <article class="service-item">
-                <div class="service-item__icon">
-                  <img src="./assets/images/light-bulb.svg" alt="" />
-                </div>
-                <h3 class="heading--small service-item__heading">
-                  Product design
-                </h3>
-                <p class="desc service-item__desc">
-                  Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
-                  solor ut elementum turpis.
-                </p>
-              </article>
-            </div>
+        <!-- Service group -->
+        <div class="service-group">
+          <div class="container">
+            <div class="row row-cols-1 flex-nowrap">
+              <!-- Item 1 -->
+              <div class="col">
+                <article class="service-item">
+                  <div class="service-item__icon">
+                    <img src="./assets/images/light-bulb.svg" alt="" />
+                  </div>
+                  <h3 class="heading--small service-item__heading">
+                    Product design
+                  </h3>
+                  <p class="desc service-item__desc">
+                    Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
+                    solor ut elementum turpis.
+                  </p>
+                </article>
+              </div>
 
-            <!-- Item 2 -->
-            <div class="col">
-              <article class="service-item">
-                <div class="service-item__icon">
-                  <img src="./assets/images/pencil.svg" alt="" />
-                </div>
-                <h3 class="heading--small service-item__heading">
-                  UI/UX Design
-                </h3>
-                <p class="desc service-item__desc">
-                  Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
-                  solor ut elementum turpis.
-                </p>
-              </article>
-            </div>
+              <!-- Item 2 -->
+              <div class="col">
+                <article class="service-item">
+                  <div class="service-item__icon">
+                    <img src="./assets/images/pencil.svg" alt="" />
+                  </div>
+                  <h3 class="heading--small service-item__heading">
+                    UI/UX Design
+                  </h3>
+                  <p class="desc service-item__desc">
+                    Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
+                    solor ut elementum turpis.
+                  </p>
+                </article>
+              </div>
 
-            <!-- Item 3 -->
-            <div class="col">
-              <article class="service-item">
-                <div class="service-item__icon">
-                  <img src="./assets/images/phone.svg" alt="" />
-                </div>
-                <h3 class="heading--small service-item__heading">
-                  Interactive design
-                </h3>
-                <p class="desc service-item__desc">
-                  Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
-                  solor ut elementum turpis.
-                </p>
-              </article>
+              <!-- Item 3 -->
+              <div class="col">
+                <article class="service-item">
+                  <div class="service-item__icon">
+                    <img src="./assets/images/phone.svg" alt="" />
+                  </div>
+                  <h3 class="heading--small service-item__heading">
+                    Interactive design
+                  </h3>
+                  <p class="desc service-item__desc">
+                    Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
+                    solor ut elementum turpis.
+                  </p>
+                </article>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Active circle group -->
-      <div class="active-group">
-        <div class="active-circle active"></div>
-        <div class="active-circle"></div>
-        <div class="active-circle"></div>
+        <!-- Active circle group -->
+        <div class="active-group">
+          <div class="active-circle active"></div>
+          <div class="active-circle"></div>
+          <div class="active-circle"></div>
+        </div>
       </div>
     </section>
 
     <!-- Project -->
     <section class="project">
-      <!-- Header -->
-      <section class="project__header">
-        <h1 class="heading project__heading">
-          Take a look at my recent projects
-        </h1>
-        <p class="project__desc desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non
-          nisl tincidunt ut elementum turpis.
-        </p>
-      </section>
+      <div class="container">
+        <!-- Header -->
+        <section class="project__header">
+          <h1 class="heading project__heading">
+            Take a look at my recent projects
+          </h1>
+          <p class="project__desc desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
+            non nisl tincidunt ut elementum turpis.
+          </p>
+        </section>
 
-      <!-- Project group -->
-      <div class="project-group">
-        <div class="container">
-          <div class="row row-cols-2">
-            <!-- Item 1 -->
-            <div class="col">
-              <article class="project-item">
-                <!-- Content -->
-                <div class="projet-item__content">
-                  <h3 class="heading--small project-item__heading">
-                    Wally Website
-                  </h3>
-                  <p class="project-item__desc desc">
-                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
-                  </p>
-                  <a href="#!" class="project-item__link">Case Study</a>
-                </div>
+        <!-- Project group -->
+        <div class="project-group">
+          <div class="container">
+            <div class="row row-cols-1">
+              <!-- Item 1 -->
+              <div class="col">
+                <article class="project-item">
+                  <!-- Content -->
+                  <div class="projet-item__content">
+                    <h3 class="heading--small project-item__heading">
+                      Wally Website
+                    </h3>
+                    <p class="project-item__desc desc">
+                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                    </p>
+                    <a href="#!" class="project-item__link">Case Study</a>
+                  </div>
 
-                <!-- Image -->
-                <img
-                  src="./assets/images/project-01.svg"
-                  alt="project-01"
-                  class="project-item__img"
-                />
+                  <!-- Image -->
+                  <img
+                    src="./assets/images/project-01.svg"
+                    alt="project-01"
+                    class="project-item__img"
+                  />
 
-                <!-- Decor -->
-                <img
-                  src="./assets/images/project-decor.svg"
-                  alt=""
-                  class="project-item__decor"
-                />
-              </article>
-            </div>
+                  <!-- Decor -->
+                  <img
+                    src="./assets/images/project-decor.svg"
+                    alt=""
+                    class="project-item__decor"
+                  />
+                </article>
+              </div>
 
-            <!-- Item 2 -->
-            <div class="col">
-              <article class="project-item">
-                <!-- Content -->
-                <div class="projet-item__content">
-                  <h3 class="heading--small project-item__heading">
-                    Banking App
-                  </h3>
-                  <p class="project-item__desc desc">
-                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
-                  </p>
-                  <a href="#!" class="project-item__link">Case Study</a>
-                </div>
+              <!-- Item 2 -->
+              <div class="col">
+                <article class="project-item">
+                  <!-- Content -->
+                  <div class="projet-item__content">
+                    <h3 class="heading--small project-item__heading">
+                      Banking App
+                    </h3>
+                    <p class="project-item__desc desc">
+                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                    </p>
+                    <a href="#!" class="project-item__link">Case Study</a>
+                  </div>
 
-                <!-- Image -->
-                <img
-                  src="./assets/images/project-02.svg"
-                  alt="project-02"
-                  class="project-item__img"
-                />
+                  <!-- Image -->
+                  <img
+                    src="./assets/images/project-02.svg"
+                    alt="project-02"
+                    class="project-item__img"
+                  />
 
-                <!-- Decor -->
-                <img
-                  src="./assets/images/project-decor.svg"
-                  alt=""
-                  class="project-item__decor"
-                />
-              </article>
-            </div>
+                  <!-- Decor -->
+                  <img
+                    src="./assets/images/project-decor.svg"
+                    alt=""
+                    class="project-item__decor"
+                  />
+                </article>
+              </div>
 
-            <!-- Item 3 -->
-            <div class="col">
-              <article class="project-item">
-                <!-- Content -->
-                <div class="projet-item__content">
-                  <h3 class="heading--small project-item__heading">Web App</h3>
-                  <p class="project-item__desc desc">
-                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
-                  </p>
-                  <a href="#!" class="project-item__link">Case Study</a>
-                </div>
+              <!-- Item 3 -->
+              <div class="col">
+                <article class="project-item">
+                  <!-- Content -->
+                  <div class="projet-item__content">
+                    <h3 class="heading--small project-item__heading">
+                      Web App
+                    </h3>
+                    <p class="project-item__desc desc">
+                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                    </p>
+                    <a href="#!" class="project-item__link">Case Study</a>
+                  </div>
 
-                <!-- Image -->
-                <img
-                  src="./assets/images/project-03.svg"
-                  alt="project-03"
-                  class="project-item__img"
-                />
+                  <!-- Image -->
+                  <img
+                    src="./assets/images/project-03.svg"
+                    alt="project-03"
+                    class="project-item__img"
+                  />
 
-                <!-- Decor -->
-                <img
-                  src="./assets/images/project-decor.svg"
-                  alt=""
-                  class="project-item__decor"
-                />
-              </article>
-            </div>
+                  <!-- Decor -->
+                  <img
+                    src="./assets/images/project-decor.svg"
+                    alt=""
+                    class="project-item__decor"
+                  />
+                </article>
+              </div>
 
-            <!-- Item 4 -->
-            <div class="col">
-              <article class="project-item">
-                <!-- Content -->
-                <div class="projet-item__content">
-                  <h3 class="heading--small project-item__heading">
-                    Oculus Website
-                  </h3>
-                  <p class="project-item__desc desc">
-                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
-                  </p>
-                  <a href="#!" class="project-item__link">Case Study</a>
-                </div>
+              <!-- Item 4 -->
+              <div class="col">
+                <article class="project-item">
+                  <!-- Content -->
+                  <div class="projet-item__content">
+                    <h3 class="heading--small project-item__heading">
+                      Oculus Website
+                    </h3>
+                    <p class="project-item__desc desc">
+                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                    </p>
+                    <a href="#!" class="project-item__link">Case Study</a>
+                  </div>
 
-                <!-- Image -->
-                <img
-                  src="./assets/images/project-04.svg"
-                  alt="project-04"
-                  class="project-item__img"
-                />
+                  <!-- Image -->
+                  <img
+                    src="./assets/images/project-04.svg"
+                    alt="project-04"
+                    class="project-item__img"
+                  />
 
-                <!-- Decor -->
-                <img
-                  src="./assets/images/project-decor.svg"
-                  alt=""
-                  class="project-item__decor"
-                />
-              </article>
+                  <!-- Decor -->
+                  <img
+                    src="./assets/images/project-decor.svg"
+                    alt=""
+                    class="project-item__decor"
+                  />
+                </article>
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- CTA Btn -->
-        <div class="btn-wrap">
-          <a href="#!" class="btn project__btn">All Projects</a>
+          <!-- CTA Btn -->
+          <div class="btn-wrap">
+            <a href="#!" class="btn project__btn">All Projects</a>
+          </div>
         </div>
       </div>
     </section>
