Add Stat part on mobile

--- a/index.html
+++ b/index.html
@@ -315,55 +315,53 @@
 
         <!-- Service group -->
         <div class="service-group">
-          <div class="container">
-            <div class="row row-cols-1 flex-nowrap">
-              <!-- Item 1 -->
-              <div class="col">
-                <article class="service-item">
-                  <div class="service-item__icon">
-                    <img src="./assets/images/light-bulb.svg" alt="" />
-                  </div>
-                  <h3 class="heading--small service-item__heading">
-                    Product design
-                  </h3>
-                  <p class="desc service-item__desc">
-                    Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
-                    solor ut elementum turpis.
-                  </p>
-                </article>
-              </div>
+          <div class="row row-cols-1 flex-nowrap">
+            <!-- Item 1 -->
+            <div class="col">
+              <article class="service-item">
+                <div class="service-item__icon">
+                  <img src="./assets/images/light-bulb.svg" alt="" />
+                </div>
+                <h3 class="heading--small service-item__heading">
+                  Product design
+                </h3>
+                <p class="desc service-item__desc">
+                  Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
+                  solor ut elementum turpis.
+                </p>
+              </article>
+            </div>
 
-              <!-- Item 2 -->
-              <div class="col">
-                <article class="service-item">
-                  <div class="service-item__icon">
-                    <img src="./assets/images/pencil.svg" alt="" />
-                  </div>
-                  <h3 class="heading--small service-item__heading">
-                    UI/UX Design
-                  </h3>
-                  <p class="desc service-item__desc">
-                    Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
-                    solor ut elementum turpis.
-                  </p>
-                </article>
-              </div>
+            <!-- Item 2 -->
+            <div class="col">
+              <article class="service-item">
+                <div class="service-item__icon">
+                  <img src="./assets/images/pencil.svg" alt="" />
+                </div>
+                <h3 class="heading--small service-item__heading">
+                  UI/UX Design
+                </h3>
+                <p class="desc service-item__desc">
+                  Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
+                  solor ut elementum turpis.
+                </p>
+              </article>
+            </div>
 
-              <!-- Item 3 -->
-              <div class="col">
-                <article class="service-item">
-                  <div class="service-item__icon">
-                    <img src="./assets/images/phone.svg" alt="" />
-                  </div>
-                  <h3 class="heading--small service-item__heading">
-                    Interactive design
-                  </h3>
-                  <p class="desc service-item__desc">
-                    Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
-                    solor ut elementum turpis.
-                  </p>
-                </article>
-              </div>
+            <!-- Item 3 -->
+            <div class="col">
+              <article class="service-item">
+                <div class="service-item__icon">
+                  <img src="./assets/images/phone.svg" alt="" />
+                </div>
+                <h3 class="heading--small service-item__heading">
+                  Interactive design
+                </h3>
+                <p class="desc service-item__desc">
+                  Lorem ipsum dolor sit amet, solor adipiscing elit. Non nisl
+                  solor ut elementum turpis.
+                </p>
+              </article>
             </div>
           </div>
         </div>
@@ -393,127 +391,123 @@
 
         <!-- Project group -->
         <div class="project-group">
-          <div class="container">
-            <div class="row row-cols-1">
-              <!-- Item 1 -->
-              <div class="col">
-                <article class="project-item">
-                  <!-- Content -->
-                  <div class="projet-item__content">
-                    <h3 class="heading--small project-item__heading">
-                      Wally Website
-                    </h3>
-                    <p class="project-item__desc desc">
-                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
-                    </p>
-                    <a href="#!" class="project-item__link">Case Study</a>
-                  </div>
+          <div class="row row-cols-1">
+            <!-- Item 1 -->
+            <div class="col">
+              <article class="project-item">
+                <!-- Content -->
+                <div class="projet-item__content">
+                  <h3 class="heading--small project-item__heading">
+                    Wally Website
+                  </h3>
+                  <p class="project-item__desc desc">
+                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                  </p>
+                  <a href="#!" class="project-item__link">Case Study</a>
+                </div>
 
-                  <!-- Image -->
-                  <img
-                    src="./assets/images/project-01.svg"
-                    alt="project-01"
-                    class="project-item__img"
-                  />
+                <!-- Image -->
+                <img
+                  src="./assets/images/project-01.svg"
+                  alt="project-01"
+                  class="project-item__img"
+                />
 
-                  <!-- Decor -->
-                  <img
-                    src="./assets/images/project-decor.svg"
-                    alt=""
-                    class="project-item__decor"
-                  />
-                </article>
-              </div>
+                <!-- Decor -->
+                <img
+                  src="./assets/images/project-decor.svg"
+                  alt=""
+                  class="project-item__decor"
+                />
+              </article>
+            </div>
 
-              <!-- Item 2 -->
-              <div class="col">
-                <article class="project-item">
-                  <!-- Content -->
-                  <div class="projet-item__content">
-                    <h3 class="heading--small project-item__heading">
-                      Banking App
-                    </h3>
-                    <p class="project-item__desc desc">
-                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
-                    </p>
-                    <a href="#!" class="project-item__link">Case Study</a>
-                  </div>
+            <!-- Item 2 -->
+            <div class="col">
+              <article class="project-item">
+                <!-- Content -->
+                <div class="projet-item__content">
+                  <h3 class="heading--small project-item__heading">
+                    Banking App
+                  </h3>
+                  <p class="project-item__desc desc">
+                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                  </p>
+                  <a href="#!" class="project-item__link">Case Study</a>
+                </div>
 
-                  <!-- Image -->
-                  <img
-                    src="./assets/images/project-02.svg"
-                    alt="project-02"
-                    class="project-item__img"
-                  />
+                <!-- Image -->
+                <img
+                  src="./assets/images/project-02.svg"
+                  alt="project-02"
+                  class="project-item__img"
+                />
 
-                  <!-- Decor -->
-                  <img
-                    src="./assets/images/project-decor.svg"
-                    alt=""
-                    class="project-item__decor"
-                  />
-                </article>
-              </div>
+                <!-- Decor -->
+                <img
+                  src="./assets/images/project-decor.svg"
+                  alt=""
+                  class="project-item__decor"
+                />
+              </article>
+            </div>
 
-              <!-- Item 3 -->
-              <div class="col">
-                <article class="project-item">
-                  <!-- Content -->
-                  <div class="projet-item__content">
-                    <h3 class="heading--small project-item__heading">
-                      Web App
-                    </h3>
-                    <p class="project-item__desc desc">
-                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
-                    </p>
-                    <a href="#!" class="project-item__link">Case Study</a>
-                  </div>
+            <!-- Item 3 -->
+            <div class="col">
+              <article class="project-item">
+                <!-- Content -->
+                <div class="projet-item__content">
+                  <h3 class="heading--small project-item__heading">Web App</h3>
+                  <p class="project-item__desc desc">
+                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                  </p>
+                  <a href="#!" class="project-item__link">Case Study</a>
+                </div>
 
-                  <!-- Image -->
-                  <img
-                    src="./assets/images/project-03.svg"
-                    alt="project-03"
-                    class="project-item__img"
-                  />
+                <!-- Image -->
+                <img
+                  src="./assets/images/project-03.svg"
+                  alt="project-03"
+                  class="project-item__img"
+                />
 
-                  <!-- Decor -->
-                  <img
-                    src="./assets/images/project-decor.svg"
-                    alt=""
-                    class="project-item__decor"
-                  />
-                </article>
-              </div>
+                <!-- Decor -->
+                <img
+                  src="./assets/images/project-decor.svg"
+                  alt=""
+                  class="project-item__decor"
+                />
+              </article>
+            </div>
 
-              <!-- Item 4 -->
-              <div class="col">
-                <article class="project-item">
-                  <!-- Content -->
-                  <div class="projet-item__content">
-                    <h3 class="heading--small project-item__heading">
-                      Oculus Website
-                    </h3>
-                    <p class="project-item__desc desc">
-                      Lorem ipsum dolor amet, consectetur adipiscing st elit.
-                    </p>
-                    <a href="#!" class="project-item__link">Case Study</a>
-                  </div>
+            <!-- Item 4 -->
+            <div class="col">
+              <article class="project-item">
+                <!-- Content -->
+                <div class="projet-item__content">
+                  <h3 class="heading--small project-item__heading">
+                    Oculus Website
+                  </h3>
+                  <p class="project-item__desc desc">
+                    Lorem ipsum dolor amet, consectetur adipiscing st elit.
+                  </p>
+                  <a href="#!" class="project-item__link">Case Study</a>
+                </div>
 
-                  <!-- Image -->
-                  <img
-                    src="./assets/images/project-04.svg"
-                    alt="project-04"
-                    class="project-item__img"
-                  />
+                <!-- Image -->
+                <img
+                  src="./assets/images/project-04.svg"
+                  alt="project-04"
+                  class="project-item__img"
+                />
 
-                  <!-- Decor -->
-                  <img
-                    src="./assets/images/project-decor.svg"
-                    alt=""
-                    class="project-item__decor"
-                  />
-                </article>
-              </div>
+                <!-- Decor -->
+                <img
+                  src="./assets/images/project-decor.svg"
+                  alt=""
+                  class="project-item__decor"
+                />
+              </article>
             </div>
           </div>
 
@@ -523,6 +517,65 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- Stat -->
+    <section class="stat">
+      <div class="container">
+        <!-- Header -->
+        <section class="stat__header">
+          <div>
+            <span class="stat__greeting">Hey,,,,It’s Arif</span>
+            <img src="./assets/images/waving.svg" alt="hand-waving" />
+          </div>
+          <h2 class="stat__heading heading">Interactive Designer</h2>
+          <p class="stat__desc desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
+            non nisl tincidunt ut elementum turpis.
+          </p>
+        </section>
+
+        <!-- Stat group -->
+        <div class="stat-group">
+          <!-- Stat 1 -->
+          <div class="stat-item">
+            <strong class="stat-item__number">08+</strong>
+            <p class="stat-item__desc desc">Years Experience</p>
+          </div>
+
+          <!-- Stat 2 -->
+          <div class="stat-item">
+            <strong class="stat-item__number">21+</strong>
+            <p class="stat-item__desc desc">Features & Awards</p>
+          </div>
+
+          <!-- Stat 3 -->
+          <div class="stat-item">
+            <strong class="stat-item__number">97%</strong>
+            <p class="stat-item__desc desc">Clients Rating</p>
+          </div>
+        </div>
+
+        <!-- Video -->
+        <div class="stat-video">
+          <img
+            src="./assets/images/video-thumb.png"
+            alt="thumbnail"
+            class="stat-video__thumb"
+          />
+
+          <button class="stat-video__play-btn">
+            <img src="./assets/images/play.svg" alt="" />
+          </button>
+
+          <div class="stat-video__label">INTRO VIDEO</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Feedback -->
+    <section class="feedback">
+      <div class="container"></div>
     </section>
   </body>
 </html>
