Add Mood part on mobile

--- a/index.html
+++ b/index.html
@@ -824,6 +824,56 @@
             </div>
           </div>
         </section>
+
+        <!-- Mood -->
+        <section class="mood">
+          <h2 class="heading">My atmosphere</h2>
+          <p class="desc mood__desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
+            non nisl tincidunt ut elementum turpis.
+          </p>
+          <a href="#!" class="mood__link">@interaction_arif</a>
+
+          <!-- Mood group -->
+          <div class="mood__img-group">
+            <div class="row row-cols-1 flex-nowrap">
+              <div class="col">
+                <figure>
+                  <img
+                    src="./assets/images/mood-01.png"
+                    alt="mood-01"
+                    class="mood__img"
+                  />
+                </figure>
+              </div>
+              <div class="col">
+                <figure>
+                  <img
+                    src="./assets/images/mood-02.png"
+                    alt="mood-02"
+                    class="mood__img"
+                  />
+                </figure>
+              </div>
+              <div class="col">
+                <figure>
+                  <img
+                    src="./assets/images/mood-03.png"
+                    alt="mood-03"
+                    class="mood__img"
+                  />
+                </figure>
+              </div>
+            </div>
+          </div>
+
+          <!-- Active circle group -->
+          <div class="active-group">
+            <div class="active-circle active"></div>
+            <div class="active-circle"></div>
+            <div class="active-circle"></div>
+          </div>
+        </section>
       </div>
     </main>
   </body>
